<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_theme"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_sign_up_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/heading_2"
            android:textColor="@color/dark_green"
            app:layout_constraintBottom_toTopOf="@id/edt_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/iv_plantani_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/base_margin_doubled"
            android:src="@drawable/plantani"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/content_description_plantani_logo_text" />

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniEditText
            android:id="@+id/edt_name"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/base_margin_doubled"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_plantani_text" />

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniEditText
            android:id="@+id/edt_email"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/base_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name" />

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniEditText
            android:id="@+id/edt_username"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/base_margin"
            android:inputType="textPersonName"
            android:hint="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email" />

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniEditText
            android:id="@+id/edt_password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/base_margin"
            android:inputType="textPassword"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_username" />

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniEditText
            android:id="@+id/edt_phone"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/base_margin"
            android:inputType="phone"
            android:hint="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password" />

        <AutoCompleteTextView
            android:id="@+id/edt_location"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/base_margin"
            android:hint="@string/lokasi_nama_provinsi"
            android:background="@drawable/plantani_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_phone"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/button_auth_width"
            android:layout_height="@dimen/button_auth_height"
            android:layout_marginTop="@dimen/base_margin_doubled"
            android:background="@drawable/plantani_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="@dimen/paragraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_location" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/have_account"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:text="@string/login"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_have_account"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>