<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_theme"
    tools:context=".ui.AccountActivity">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_back_black_24dp"
        android:layout_marginTop="@dimen/base_margin"
        android:layout_marginStart="@dimen/base_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_background"
        android:paddingVertical="@dimen/base_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/profile"
            android:textSize="@dimen/heading_3"
            android:textAllCaps="true"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/base_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile"
            tools:src="@tools:sample/avatars"/>

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding"
            android:layout_marginTop="@dimen/base_margin_doubled"
            android:background="@color/dark_green"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintCircleRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_green"
                android:textColor="@color/white"
                android:textSize="@dimen/heading_2"
                android:textStyle="bold"
                tools:text="@string/account_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_green"
                android:textColor="@color/white"
                android:textSize="@dimen/heading_3"
                android:textStyle="italic"
                tools:text="@string/account_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_green"
                android:textColor="@color/white"
                tools:text="@string/account_name"/>
        </LinearLayout>

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniButton
            android:id="@+id/btn_my_plants"
            android:layout_width="@dimen/button_auth_width"
            android:layout_height="@dimen/button_auth_height"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/my_plants"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_profile"/>

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniButton
            android:id="@+id/btn_profile_settings"
            android:layout_width="@dimen/button_auth_width"
            android:layout_height="@dimen/button_auth_height"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/profile_settings"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_my_plants"/>

        <id.plantaniteam.plantaniapp.ui.view.PlanTaniButton
            android:id="@+id/btn_change_password"
            android:layout_width="@dimen/button_auth_width"
            android:layout_height="@dimen/button_auth_height"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/my_plants"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_profile_settings"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>