<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_theme"
    tools:context=".ui.MainActivity">
    
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ic_account"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_account_24dp"
                    android:layout_marginTop="@dimen/base_margin_doubled"
                    android:layout_marginEnd="@dimen/base_margin_doubled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_plants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:text="@string/plants"
                    android:textSize="@dimen/heading_2"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ic_account" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/base_margin"
                    android:text="@string/view_all"
                    android:textSize="@dimen/paragraph"
                    app:layout_constraintTop_toBottomOf="@id/ic_account"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_plants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_plants"/>

                <TextView
                    android:id="@+id/tv_plants_disease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:text="@string/plants_disease"
                    android:textSize="@dimen/heading_2"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_plants"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ic_task"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="@dimen/base_margin_doubled"
            android:background="@color/white"
            android:src="@drawable/ic_task_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ImageView
            android:id="@+id/ic_notifications"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="@dimen/base_margin_doubled"
            android:background="@color/white"
            android:src="@drawable/ic_notifications_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <ImageView
            android:id="@+id/ic_camera"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:src="@drawable/ic_camera_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_task"
            app:layout_constraintEnd_toStartOf="@id/ic_notifications"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>